alignment solved

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     gap: 20px;
     font-size: 1.2rem;
     width: 100%;
+    align-items: center;
 }
 
 .menu-item li {
